[Mission5] feat: 전체 작동 구조 추가